# clira

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: db.json
src/: db.rs  main.rs  models.rs  navigator.rs  utils.rs
src/ui/: mod.rs  navigator.rs
src/ui/pages/: format.rs  menus.rs  mod.rs  prompts.rs
