[package]
name = "jira-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tabled = "0.15.0"
tempfile = "3.9.0"
